--- a/docs/style/css/panel.css
+++ b/docs/style/css/panel.css
@@ -80,3 +80,7 @@
 .panel-collapsed .panel-toggle .lucide {
     transform: rotate(-90deg);
 } 
+
+.right-panel .panel-body, .left-panel .panel-body {
+    overflow-y: visible;
+} 
