--- a/docs/style/css/grid.css
+++ b/docs/style/css/grid.css
@@ -50,7 +50,7 @@
 .col-11 { flex: 0 0 91.666667%; max-width: 91.666667%; }
 .col-12 { flex: 0 0 100%; max-width: 100%; }
 
-@media (max-width: 768px) {
+@media (max-width: var(--breakpoint-sm)) {
     .col, [class^="col-"] {
         flex-basis: 100%;
         max-width: 100%;
