--- a/docs/style/css/base.css
+++ b/docs/style/css/base.css
@@ -160,9 +160,9 @@ textarea:focus-visible,
 .left-panel {
     width: 280px;
     flex-shrink: 0;
-    height: calc(100vh - (var(--space-4) * 2));
+    height: calc(100vh - var(--header-height) - var(--footer-height) - (var(--space-4) * 2));
     position: fixed;
-    top: var(--space-4);
+    top: calc(var(--header-height) + var(--space-4));
     left: var(--space-4);
     border-radius: var(--radius-lg);
     border-right: 1px solid var(--border-color);
@@ -172,9 +172,9 @@ textarea:focus-visible,
 
 .right-panel {
     width: 280px;
-    height: calc(100vh - (var(--space-4) * 2));
+    height: calc(100vh - var(--header-height) - var(--footer-height) - (var(--space-4) * 2));
     position: fixed;
-    top: var(--space-4);
+    top: calc(var(--header-height) + var(--space-4));
     right: var(--space-4);
     border-radius: var(--radius-lg);
     background-color: var(--bg-layer-0);
@@ -207,7 +207,7 @@ textarea:focus-visible,
 
 .main-container {
     flex-grow: 1;
-    padding: var(--space-8);
+    padding: calc(var(--header-height) + var(--space-8)) var(--space-8) calc(var(--footer-height) + var(--space-8));
     max-width: 1400px;
     margin-left: calc(280px + var(--space-4));
     margin-right: calc(280px + var(--space-4));
